Prepare for asset rendering